<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#34324B"
    tools:context=".pages.ListaContato">

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/floatingActionButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="32dp"
      android:clickable="true"
      android:onClick="floatButton"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.954"
      app:layout_constraintStart_toStartOf="parent"
      app:srcCompat="@android:drawable/ic_menu_add"
      android:focusable="true"
      android:contentDescription="@string/todo3" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/lista_contato"
      android:layout_width="407dp"
      android:layout_height="607dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:text="@string/meus_contatos"
      android:textAppearance="@style/TextAppearance.AppCompat.Body2"
      android:textColor="#F4F4F4"
      android:textSize="24sp"
      app:layout_constraintEnd_toEndOf="@+id/imageView"
      app:layout_constraintHorizontal_bias="0.504"
      app:layout_constraintStart_toStartOf="@+id/imageView"
      app:layout_constraintTop_toBottomOf="@+id/imageView" />

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="52dp"
      android:layout_height="49dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/logochat"
      android:contentDescription="@string/todo" />

  <Button
      android:id="@+id/button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="68dp"
      android:backgroundTint="#673AB7"
      android:onClick="SignOut"
      android:text="@string/sair"
      android:textColor="#FFFFFF"
      app:layout_constraintBottom_toBottomOf="@+id/imageView"
      app:layout_constraintEnd_toStartOf="@+id/imageView"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>