<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="340dp"
        android:layout_height="66dp"
        android:layout_marginTop="7dp"
        app:cardBackgroundColor="#FF66C4"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/foto_contato"
                android:layout_width="220dp"
                android:layout_height="68dp"
                android:layout_weight="1"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/todo2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nome_contato"
                    android:layout_width="236dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:text="@string/nome_de_contato"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/telefone"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_weight="1"
                    android:text="@string/_41_9999_9999"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>